--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Tool to keep windows machine awake and hotkey to turn monitor off",
   "main": "index.js",
+  "private": false,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -30,5 +31,8 @@
     "node-global-key-listener": "^0.1.1",
     "node-key-sender": "^1.0.11",
     "turn-off-display": "^0.2.0"
+  },
+  "devDependencies": {
+    "pm2": "^4.4.0"
   }
 }
