update .gitignore & author name

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "off",
     "monitor"
   ],
-  "author": "Mostafa Elsayed",
+  "author": "Mostafa Sherif",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/sheriffMoose/stay-awake/issues"
