--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "release": "auto shipit"
   },
   "dependencies": {
-    "lock-your-windows": "^0.0.1",
+    "lock-your-windows": "0.0.2",
     "node-global-key-listener": "^0.1.1",
     "node-key-sender": "^1.0.11",
     "turn-off-display": "^0.2.0"
